argocd/manifests/yams/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: yams
  labels:
    app.kubernetes.io/name: yams
    app.kubernetes.io/managed-by: argocd
