argocd/manifests/yams/base/service-jellyfin-invite.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin-invite
  namespace: yams
  labels:
    app: jellyfin-invite
    app.kubernetes.io/name: jellyfin-invite
    app.kubernetes.io/part-of: yams
spec:
  type: ClusterIP
  selector:
    app: jellyfin-invite
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
